--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malla Interactiva</title>
+    <title>Obstetricia y Puericultura UDA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Malla Interactiva</h1>
+    <h1>Obstetricia y Puericultura UDA</h1>
     <div id="malla-container"></div>
     <script src="script.js"></script>
 </body>
